# agent_eval

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  DESIGN.md  LICENSE  README.md  STATUS.md  constraints.txt  pricing.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task_proposal.md
.github/workflows/: ci.yml  publish-sandbox-image.yml  verify-submission.yml
docs/: adversarial.md  faq.md  good-first-issues.md  leaderboard.md  methodology.md  metrics.md  references.bib  remote-runner.md  reproducibility.md  sandbox.md  tasks.md
docs/launch/: README.md  blog-post.md  reddit-claude.md  reddit-ml.md  runbook.md  show-hn-first-comment.md  show-hn-post.md  twitter-announce.md  twitter-teaser.md  twitter-thread.md  workshop-paper-outline.md
frontend/: README.md  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: LeaderboardTable.tsx
sandbox/: Dockerfile.base
scripts/: pin_image_sha.sh
skills-baseline/no-skills/: .gitkeep
src/: harness.py  remote.py  submit.py
src/agenteval/: __init__.py  cli.py  errors.py  harness.py  leaderboard_export.py  remote.py  submit.py
src/grading/: runner.py
src/metrics/: __init__.py  bootstrap.py
src/reproducibility/: __init__.py
src/runners/: anthropic.py  google.py  mock.py
src/sandbox/: docker.py
src/tasks/: schema.py
tasks/skill-specific-v1/: README.md  code-review-01.yaml  code-review-02.yaml  code-review-03.yaml  code-review-04.yaml  meta.yaml  multi-file-01.yaml  multi-file-02.yaml  multi-file-03.yaml  multi-file-04.yaml  refactor-01.yaml  refactor-02.yaml  refactor-03.yaml  refactor-04.yaml  style-adherence-01.yaml  style-adherence-02.yaml  style-adherence-03.yaml  style-adherence-04.yaml  (+4 more)
tests/: conftest.py  test_demo_path.py  test_grading_utils.py  test_loader.py  test_metrics.py  test_reproducibility.py  test_sandbox_docker.py  test_schema.py  test_skill_bundle.py  test_submit_verify.py
(+38 files in other folders)
